[package]
name = "load-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.7"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
